# karbotrage

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  DOCUMENTATION.md  LICENSE  README.md  SESSIONS.md  SUMMARY.md  config.json  config.yaml  config.yaml.example  example_usage.py  karbot_runner.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
agents/: __init__.py
agents/floor/: __init__.py  arb_scanner.py  mock_price_watcher.py  paper_executor.py  position_tracker.py  price_watcher.py  risk_gate.py
agents/management/: __init__.py  compliance.py  reflection.py
agents/notifications/: telegram_agent.py
agents/research/: __init__.py  market_analyst.py  regulatory_intelligence.py
compliance/: officer.py
config/: config.example.yaml
core/: __init__.py  config.py  events.py
data/: __init__.py  market_data.py
data/sources/: __init__.py  kalshi.py  polymarket.py
docs/: architecture.md  development.md
execution/: __init__.py  engine.py
intelligence/: __init__.py  analyzer.py
karbot/: __init__.py  main.py
karbot/core/: __init__.py  config.py  events.py
monitoring/: __init__.py  logger.py
strategies/: __init__.py  strategy_manager.py
tests/: test_arb_scanner_s1_canary_mode.py  test_arb_scanner_s1_candidate_visibility.py  test_arb_scanner_s1_sanity_ceiling.py  test_basic.py  test_compliance_resolution.py  test_config.py  test_config_resolved_log.py  test_core_config.py  test_kalshi_fee_model.py  test_kalshi_orderbook.py  test_kalshi_reconnect.py  test_paper_trading.py  test_position_tracker.py  test_price_watcher.py  test_price_watcher_gap_publish.py  test_regulatory_intelligence.py  test_risk_gate_liquidity_cap.py  test_risk_gate_zero_size_rejection.py  test_runner_restart.py  test_telegram_feed_health.py  test_telegram_kill_switch.py  test_telegram_no_duplicate_regulatory_alert.py  test_telegram_sender_auth.py  test_telegram_small_trade_display.py  test_telegram_trade_resolved.py
tests/fixtures/: paper_test_prices.json
trading/: __init__.py  trader.py
