[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "karbot-rage"
version = "1.0.0"
description = "Karbot Rage! — Intelligent Prediction Market Engine"
authors = [{ name = "WallStRobotics", email = "ops@wallstrobotics.com" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"

dependencies = [
    # Async & networking
    "aiohttp>=3.9",
    "aiofiles>=23.2",
    "websockets>=12.0",
    "httpx>=0.27",

    # Data & computation
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",       # Granger causality
    "scikit-learn>=1.4",

    # Configuration & validation
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",

    # Database
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",

    # AI / LLM
    "anthropic>=0.26",

    # Blockchain / Polymarket
    "web3>=6.18",
    "eth-account>=0.11",

    # Monitoring & alerts
    "python-telegram-bot>=21.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "prometheus-client>=0.20",

    # Logging & observability
    "structlog>=24.2",
    "rich>=13.7",

    # Utilities
    "tenacity>=8.3",           # Retry with backoff
    "cachetools>=5.3",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    "croniter>=3.0",

    # Data sources
    "feedparser>=6.0",         # RSS feeds
    "beautifulsoup4>=4.12",    # HTML parsing
    "lxml>=5.2",

    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[project.scripts]
karbot = "karbot.main:main"
karbot-paper = "karbot.main:main_paper"
karbot-backtest = "karbot.main:main_backtest"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
