[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karbotrage_v1"
version = "0.1.0"
description = "A sophisticated automated trading system for prediction markets"
readme = "README.md"
authors = [
    {name = "WarpedMind", email = "warpedmind@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
karbotrage = "karbot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["karbot*", "agents*", "core*", "compliance*", "data*", "execution*", "intelligence*", "monitoring*", "scripts*"]
